--- a/resources/style.css
+++ b/resources/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name:         simplelotus
-Theme URI:          https://roots.io/sage/
+Theme URI:          geongeorge.com
 Description:        simplelotus is a wp theme created for geongeorge.com
 Version:            0.0.1
 Author:             Geon
-Author URI:         https://roots.io/
+Author URI:         geongeorge.com
 Text Domain:        sage
 
 License:            MIT License
