--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -17,6 +17,18 @@ a {
   transition: 0.2s ease;
 
   &:hover {
-    @apply underline;
+    @apply no-underline;
   }
+}
+
+body {
+  font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Helvetica Neue", Arial, sans-serif;
+}
+
+::selection {
+  background: #6cc; /* WebKit/Blink Browsers */
+}
+
+::-moz-selection {
+  background: #6cc; /* Gecko Browsers */
 }
