--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -32,3 +32,31 @@ body {
 ::-moz-selection {
   background: #6cc; /* Gecko Browsers */
 }
+
+h1 {
+  @apply text-4xl font-bold;
+}
+
+h2 {
+  @apply text-3xl font-bold;
+}
+
+h3 {
+  @apply text-lg font-bold;
+}
+
+ul {
+  @apply list-disc list-inside;
+}
+
+ol {
+  @apply list-decimal list-inside;
+}
+
+code {
+  @apply bg-gray-700 rounded p-1;
+}
+
+pre {
+  @apply bg-gray-700 rounded p-3;
+}
